# gaphack

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECOMPOSE_REMOVAL_PLAN.md  ENHANCED_REPORT_DESIGN.md  GAPHACK_DECOMPOSE_DESIGN.md  PASS1_REMOVAL_PLAN.md  PRINCIPLED_RECLUSTERING_DESIGN.md  README.md  REFACTORING_CANDIDATES.md  RENAMING_PLAN.md  TESTING_PLAN.md  pyproject.toml  test_final_verification_demo.py  test_performance_improvement.py  test_principled_integration.py  test_report_enhancement.py  test_separated_reclustering.py
docs/: CONVERGENCE_ANALYSIS.md  GLOBAL_GAP_METRIC.md  INCREMENTAL_DESIGN.md  OPTIMIZATION_OBJECTIVE_DISCUSSION.md  PHASE3_COMPLETE.md  PHASE3_ISSUES.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  REFACTORING_DECOMPOSE.md  REFINEMENT_DESIGN.md  blast_analysis_integration.md  decompose_refactoring_plan.md  gaphack_refine_design.md  msa_distance_provider_design.md  output_reorganization_design.md
examples/: README.md
examples/data/: Russula_INxx.fasta  collybia_clusters.tsv  collybia_metrics.json  collybia_nuda_test.fasta
gaphack/: __init__.py  analyze.py  analyze_cli.py  blast_analysis.py  blast_cli.py  blast_neighborhood.py  cli.py  cluster_graph.py  cluster_id_utils.py  cluster_proximity.py  cluster_refinement.py  core.py  decompose.py  decompose_cli.py  distance_providers.py  lazy_distances.py  neighborhood_finder.py  principled_reclustering.py  refine_cli.py  refinement_types.py  resume.py  scoped_distances.py  state.py  target_clustering.py  target_selection.py  triangle_filtering.py  utils.py  version.py  vsearch_neighborhood.py
tests/: BASELINE_UPDATE.md  PHASE4_SUMMARY.md  test_analyze.py  test_blast_analysis.py  test_blast_neighborhood.py  test_cli.py  test_cluster_graph.py  test_cluster_refinement.py  test_core.py  test_decompose.py  test_distance_providers.py  test_interruption.py  test_interruption_edge_cases.py  test_iterative_russula.py  test_msa_distance_provider.py  test_performance_integration.py  test_phase4_integration.py  test_phase4_quality.py  test_phase4_refinement.py  test_phase5_finalization.py  test_principled_integration.py  test_refine_cli.py  test_refine_integration.py  test_report_integration.py  test_resume.py  test_resume_hash_expansion.py  test_separation_integration.py  test_state.py  test_target_clustering.py  test_triangle_filtering.py  test_two_pass_refinement.py  test_two_pass_russula.py  test_utils.py  test_vsearch.py
(+6 files in other folders)
